Adding seekBar and progress update showed on a TextView

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,13 +8,13 @@
     tools:layout_editor_absoluteY="81dp">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/seekBarText"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Esto es un texto!"
+        android:text=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
@@ -46,7 +46,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/seekBarText"
         app:layout_constraintVertical_bias="0.555" />
 
     <LinearLayout
@@ -63,9 +63,11 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnColor"
             android:layout_width="162dp"
             android:layout_height="wrap_content"
+            android:background="@android:color/holo_green_light"
+            android:clickable="false"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="67dp" />
 
@@ -75,7 +77,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textAlignment="center"
-            android:translationY="15dp" />
+            android:translationY="15dp"
+            android:progress="0"/>
     </LinearLayout>
 
     <Spinner
